add logo to header

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <header>
+      <img class="logo" src="https://media.glassdoor.com/sql/466202/clover-network-squarelogo-1481040034167.png" alt="">
       <h1>CloverInventory</h1>
     </header>
     <section>
