--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
   </head>
   <body>
     <header>
@@ -11,8 +12,11 @@
       <h1>CloverInventory</h1>
     </header>
     <section>
-      <button type="button" name="button">Add Item</button>
       <div class="inventory">(inventory items go here)</div>
+      <div class="form-container">
+        <div class="form">(new item form goes here)</div>
+        <button type="button" name="button">Add Item</button>
+      </div>
     </section>
   </body>
 </html>
