fix backend route for fetching inventory, set up request in frontend to ping backend api, get response to render on the page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,11 +12,7 @@
       <h1>CloverInventory</h1>
     </header>
     <section>
-      <div class="inventory">(inventory items go here)</div>
-      <div class="form-container">
-        <div class="form">(new item form goes here)</div>
-        <button type="button" name="button">Add Item</button>
-      </div>
+      <div class="inventory" id="output">(inventory items go here)</div>
     </section>
   </body>
 </html>
