--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <base href="/" />
+    <title>Clover App</title>
     <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </head>
   <body>
     <header>
@@ -12,7 +13,9 @@
       <h1>CloverInventory</h1>
     </header>
     <section>
-      <div class="inventory" id="output">(inventory items go here)</div>
+      <div class="inventory" id="inventory-items">Loading Inventory...</div>
     </section>
   </body>
+
+
 </html>
